fix next/prev spacing

--- a/src/simple_theme/static/main.css
+++ b/src/simple_theme/static/main.css
@@ -286,7 +286,16 @@ table td {
     min-width: 4em;
 }
 
-#pages .next, #pages .prev {
+#pages {
     font-size: 1.2em;
-    padding: 1em;
+}
+
+#pages .next {
+    float: right;
+    padding: 0em 1em 1em 1em;
+}
+
+#pages .prev {
+    float: left;
+    padding: 0em 1em 1em 1em;
 }
